Move menu further up, fix too big blue border

--- a/wordpress/themes/nbeat.3/src/sass/modules/_mainmenu.scss
+++ b/wordpress/themes/nbeat.3/src/sass/modules/_mainmenu.scss
@@ -8,7 +8,7 @@
     left: 0;
     right: 0;
     transition: top 0.4s ease-in-out;
-    top: -600px;
+    top: -700px;
     z-index: $no-nbeat-mainmenu-zindex;
     
     .menu {
